# nickname-forge

./: .gitgnore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
src/nickname_forge/: __init__.py  engine.py  main.py
src/nickname_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nickname_forge/data/: cyberpunk.json  fantasy.json  space.json  steampunk.json
tests/: __init__.py  test_cli.py  test_engine.py
