[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nickname-forge"
version = "0.1.0"
description = "CLI tool to forge unique nicknames in various styles"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "OrbitForgeDev", email = "orbitforge89@gmail.com"}
]
keywords = ["cli", "nickname", "generator", "forge", "typer", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/OrbitForgeDev/nickname-forge"
Repository = "https://github.com/OrbitForgeDev/nickname-forge.git"
Issues = "https://github.com/OrbitForgeDev/nickname-forge/issues"

[project.scripts]
forge = "nickname_forge.main:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]